# PraxeProjekt

./: .gitattributes  .gitignore  LICENSE  README.md
Backend/: .dockerignore  .env_example  makefile  pyproject.toml
Backend/api/src/: chat_history.json  controllers.py  main.py  routers.py
Backend/api/src/models/: model.py
Backend/docker/: Dockerfile  docker-compose.yml
UnityClient/: UpgradeLog.htm
UnityClient/Assets/: MyCharacterProfile.asset  uLipSync-Profile-New.asset
UnityClient/Assets/Animations/: IddleAnimationControllerFemale1.controller  IddleAnimationControllerFemale2.controller  IddleAnimationControllerMale.controller  Idle.fbx  Idle2.fbx  IdleFemale2.fbx
UnityClient/Assets/Fonts/: Nunito-Italic-VariableFont_wght SDF.asset
UnityClient/Assets/Model/: HeadModel_postmalone.prefab  Head_material.mat  ModelWithHair.prefab  Skybox.mat
UnityClient/Assets/Prefabs/: Bar.prefab  DialogManager.prefab  MessageItemPrefab.prefab  NPC.prefab  NPC2.prefab  Player.prefab
UnityClient/Assets/Scenes/: MainScene.unity  SampleScene.unity
UnityClient/Assets/Scripts/: ChatHistoryLoader.cs  ChatMessageItem.cs  ChatUIWindow.cs  ConfigLoader.cs  DialogScript.cs  EmotionController.cs  ErrorHandler.cs  MicVisualizer.cs  QuitManager.cs  RuntimeTTS.cs  SIdeBarChatHistory.cs  Settings.cs  SimpleWav.cs  SpeakerController.cs  Spotlight.cs  StateVisualizer.cs  UI.cs  WavUtility.cs
UnityClient/Assets/Settings/: SampleSceneProfile.asset  (+1 more)
UnityClient/Assets/_Recovery/: 0.unity  (+4 more)
UnityClient/ProjectSettings/: ProjectSettings.asset
docs/: README.MD  api.md  unity_client.md
(+26 files in other folders)
